[package]
name = "aeron_client"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"


[dependencies]
aeron-rs = {git = "https://github.com/UnitedTraders/aeron-rs.git", branch = "master"}
eyre = "0.6.12"
lazy_static = "1.4.0"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["attributes"] }
